feat: 添加后端持久化和CORS配置
- 添加 MyBatis-Plus 实体、Mapper 层
- 添加 WebConfig 全局 CORS 配置
- 修改 AgentRegistry 支持 skillDescription 和 skillTags
- 修改 NettyServerHandler 支持技能字段
- 更新 application.yml 数据库配置